<resources>
    <string name="app_name">College Carpool</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_send">Send</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="hint_firstName">First Name</string>
    <string name="hint_secondName">Second Name</string>
    <string name="title_activity_home_screen">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_login">Google Login</string>

    <string name="google_login_client">1005050635291-mem5cc24rdkmeaihtjg6u061p4cmq7d2.apps.googleusercontent.com</string>

    <!-- Nav Indicators -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- PopUp Menu Labels -->
    <string name="remove_stop">Remove Stop</string>
    <string name="move_stop_up">Move Up</string>
    <string name="move_stop_down">Move Down</string>

    <!-- Drawer Labels-->
    <string name="nav_home">Home</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_journey">Plan A Journey</string>
    <string name="nav_payment">Payment</string>

    <!-- Home Screen UI -->
    <string name="broadcast_location">Broadcast Location</string>
    <string name="plan_journey">Plan A Journey</string>
    <string name="view_journey_planner">View Journey Planner</string>

    <!-- Plan Journey UI -->
    <string name="submit_address">Submit Address</string>
    <string name="go_now">Go Now</string>
    <string name="pick_date">Pick A Date</string>
    <string name="save_journey">Save Journey</string>
    <string name="use_my_location">Use My Location</string>
    <string name="find_carpool">Find A Carpool</string>

    <!--Custom Notification-->
    <string name="ride_notification_accept">Accept</string>
    <string name="ride_notification_reject">Reject</string>

    <string name="addCarName">Add Car Chat</string>
    <string name="title_activity_plan_journey">Map</string>
    <string name="title_activity_test_drawer">Map</string>

    <string name="title_activity_view_journey">Map</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_nav2">Map</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>

</resources>